--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World! 
+<!DOCTYPE html>
+<html>
+<head>
+<title>Synonym Rolls</title>
+</head>
+<body>
+
+<h1>Synonym Rolls</h1>
+<p>Find a synonym here.</p>
+
+</body>
+</html>
