changes CSS reference

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Synonym Rolls</title>
+    <title>Synonym Rolls</title>
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
 
