--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-    
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+
 </head>
 
 <div class="header">
@@ -22,12 +23,12 @@
 
     <p>Search for a Synonym:</p>
     <div>
-        <input id="searchInput" class="form-control-sm" type="text" placeholder="word">
+        <input id="searchInput" class="searchform" type="text" placeholder="word">
     </div>
     <div class="search">
-        <button onclick="getSynonyms()" type="button" class="btn btn-secondary">Search</button>
+        <button onclick="getSynonyms()" type="button" class="searchbutton">Search</button>
     </div>
-    <div class="resultsArea" id="resultsArea">
+    <div class="resultsarea" id="resultsArea">
         <h1>Results</h1>
     </div>
 
