--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 <body class="cinnaBody">
 
-    <p>Search for synonyms:</p>
+    <p>At a loss for words? <br>Search for Synonyms here!</p>
     <div>
-        <input id="searchInput" class="searchform" type="text" placeholder="word">
+        <input id="searchInput" class="searchform" type="text" placeholder="Enter Word">
     </div>
     <div class="search">
         <button onclick="getSynonyms()" type="button" class="searchbutton">Search</button>
