possible fixed mobile media rule
also added favicon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html>
 
 <head>
+
     <title>Synonym Rolls</title>
+    
+    <link rel="icon" 
+      type="image/png" 
+      href="/logo_small.png"/>
     <link href="styles.css" rel="stylesheet">
     <script src="scripts.js"></script>
     
