--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body class="cinnaBody">
 
-    <p>At a loss for words? <br>Search for Synonyms here!</p>
+    <p>At a loss for words? <br>Search for synonyms here!</p>
     <div>
         <input id="searchInput" class="searchform" type="text" placeholder="Enter Word">
     </div>
